--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
 @import url("../src/Styles/_Login.scss");
 @import url("../src/Styles/_Home.scss");
 @import url("../src/Styles/_Header.scss");
+@import url("../src/Styles/_About.scss");
+@import url("../src/Styles/_Projects.scss");
