--- a/src/Styles/_Header.scss
+++ b/src/Styles/_Header.scss
@@ -6,6 +6,8 @@
   position: fixed;
   width: 100%;
   height: 10%;
+  top: 0;
+  padding-top: 15px;
   & ul {
     margin: 0;
     display: flex;
@@ -21,6 +23,7 @@
       transition: 500ms;
       background-color: #d4a855;
       border-radius: 20px;
+      color: black;
     }
   }
 }
