primer acercamiento de estilos

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,5 @@
 @import url("../src/Styles/_Header.scss");
 @import url("../src/Styles/_About.scss");
 @import url("../src/Styles/_Projects.scss");
+@import url("../src/Styles/_Contact.scss");
+@import url("../src/Styles/_Footer.scss");
