--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import url("../src/Styles/_Querys.scss");
 @import url("../src/Styles/_Login.scss");
 @import url("../src/Styles/_Home.scss");
 @import url("../src/Styles/_Header.scss");
