--- a/src/Styles/_About.scss
+++ b/src/Styles/_About.scss
@@ -15,6 +15,13 @@
 
     & img {
       height: 300px;
+      border-radius: 50px;
+      &:hover {
+        transition: 500ms;
+        box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
+        -webkit-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
+        -moz-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
+      }
     }
   }
   .powered {
