--- a/src/Styles/_Header.scss
+++ b/src/Styles/_Header.scss
@@ -1,3 +1,5 @@
+@import url("./_Querys.scss");
+
 #home {
   background-color: #114a64;
   display: flex;
@@ -8,6 +10,10 @@
   height: 10%;
   top: 0;
   padding-top: 15px;
+  @include mobile {
+    width: 100vw;
+    background-color: rgb(20, 220, 110) !;
+  }
   & ul {
     margin: 0;
     display: flex;
