--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
-@import url("../src/Styles/_Querys.scss");
-@import url("../src/Styles/_Login.scss");
-@import url("../src/Styles/_Home.scss");
-@import url("../src/Styles/_Header.scss");
-@import url("../src/Styles/_About.scss");
-@import url("../src/Styles/_Projects.scss");
-@import url("../src/Styles/_Contact.scss");
-@import url("../src/Styles/_Footer.scss");
+@import "./styles/_Querys.scss";
+@import "./styles/_Login.scss";
+@import "./styles/_Home.scss";
+@import "./styles/_Header.scss";
+@import "./styles/_About.scss";
+@import "./styles/_Projects.scss";
+@import "./styles/_Contact.scss";
+@import "./styles/_Footer.scss";
