--- a/src/styles/_Querys.scss
+++ b/src/styles/_Querys.scss
@@ -1,11 +1,11 @@
 @mixin computer {
-  @media screen and (max-width: 1700px) {
+  @media screen and (min-width: 1024px) and (max-width: 1700px) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 600px) and (max-width: 1000px) {
     @content;
   }
 }
