--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -1,23 +1,28 @@
 #contact {
   display: flex;
-  justify-content: flex-end;
+  width: 100%;
+  justify-content: center;
   align-items: center;
-  padding: 10px;
+  flex-wrap: wrap;
+  padding-top: 10px;
   background-color: #d4a855;
   margin-top: 40px;
-  & h2 {
-    padding: 5px;
+  @include tablet {
+    justify-content: space-evenly;
+  }
+  @include computer {
+    justify-content: space-evenly;
   }
 }
 
 #links {
   display: flex;
-  justify-content: space-around;
-  width: 50%;
-  height: 100px;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
 
   & img {
-    height: 100%;
+    height: 100px;
     padding: 2px;
     &:hover {
       transition: 500ms;
