--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -2,13 +2,24 @@
   margin-top: 30px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
   width: 100%;
-  height: 100px;
+  gap: 10px;
   background-color: #114a64 /* #d4a855 */;
 
+  @include tablet {
+    justify-content: center;
+    gap: 20px;
+  }
+
+  @include computer {
+    justify-content: space-evenly;
+    gap: 20px;
+  }
+
   & img {
-    height: 100%;
-    padding: 2px;
+    height: 100px;
     &:hover {
       transition: 500ms;
       border-radius: 50%;
