--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -1,25 +1,26 @@
-@import url("./_Querys.scss");
-
 #home {
-  background-color: #114a64;
   display: flex;
   justify-content: center;
+  align-items: center;
   font-size: larger;
   position: fixed;
   width: 100%;
   height: 10%;
   top: 0;
   padding-top: 15px;
-  @include mobile {
-    width: 100vw;
-    background-color: rgb(20, 220, 110) !;
-  }
+  background-color: #114a64;
+
   & ul {
     margin: 0;
     display: flex;
+    width: 100%;
+    justify-content: space-evenly;
     flex-direction: row;
     list-style: none;
-    gap: 30px;
+    @include computer {
+      justify-content: center;
+      gap: 100px;
+    }
   }
   & a {
     padding: 10px;
