--- a/src/styles/_Login.scss
+++ b/src/styles/_Login.scss
@@ -1,16 +1,35 @@
 body {
   margin: 0;
+}
+
+main {
+  margin: 0;
   background-color: #114a64;
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  height: 100%;
+  align-items: center;
   font-size: larger;
   font-family: "Rampart One", cursive;
   font-family: "Roboto", sans-serif;
+
   & h2 {
     color: #f5f5f5;
+  }
+
+  .saludo {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+  }
+
+  @include tablet {
+    justify-content: center;
+  }
+  @include computer {
+    justify-content: center;
   }
 }
 
