--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 30px;
+  text-align: center;
 
   & h2 {
     color: #000;
@@ -14,8 +15,9 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+
     & figure {
-      width: 40vw;
+      width: 80vw;
       text-align: center;
       &:hover {
         transition: 500ms;
@@ -23,10 +25,23 @@
         background-color: #114a64;
         border-radius: 20px;
       }
+
+      @include tablet {
+        width: 50vw;
+      }
+      @include computer {
+        width: 40vw;
+      }
     }
 
     & img {
-      width: 40vw;
+      width: 80vw;
+      @include tablet {
+        width: 50vw;
+      }
+      @include computer {
+        width: 40vw;
+      }
     }
 
     & a {
