--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
+/*importacion de querys para break points*/
 @import "./styles/_Querys.scss";
+
+/*estilos segun los componentes usados*/
 @import "./styles/_Login.scss";
 @import "./styles/_Home.scss";
 @import "./styles/_Header.scss";
