--- a/src/styles/_Querys.scss
+++ b/src/styles/_Querys.scss
@@ -1,15 +1,19 @@
+/*media query del computador*/
 @mixin computer {
   @media screen and (min-width: 1024px) and (max-width: 1700px) {
+    /*contenido del css en el archivo directo*/
     @content;
   }
 }
 
+/*media query del tablet*/
 @mixin tablet {
   @media screen and (min-width: 600px) and (max-width: 1000px) {
     @content;
   }
 }
 
+/*media query del celular (no se usò)*/
 @mixin mobile {
   @media screen and (max-width: 576px) {
     @content;
