--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -6,13 +6,15 @@
   flex-wrap: wrap;
   width: 100%;
   gap: 10px;
-  background-color: #114a64 /* #d4a855 */;
+  background-color: #114a64;
 
+  /*media query de tablet*/
   @include tablet {
     justify-content: center;
     gap: 20px;
   }
 
+  /*media query de computador*/
   @include computer {
     justify-content: space-evenly;
     gap: 20px;
