--- a/src/styles/_Login.scss
+++ b/src/styles/_Login.scss
@@ -24,12 +24,35 @@ main {
     text-align: center;
     flex-wrap: wrap;
   }
-
+  /*media quiery de tablet*/
   @include tablet {
     justify-content: center;
   }
+  /*media quiery de tablet*/
   @include computer {
     justify-content: center;
+  }
+
+  & .credentials {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    /*forma extraña del div*/
+    border-radius: 51% 49% 47% 53% / 100% 100% 0% 0%;
+    background-color: #f5f5f5;
+    width: 200px;
+    font-size: small;
+
+    &:hover {
+      transition: all 1s;
+      border-radius: 80% 20% 92% 8% / 21% 90% 10% 79%;
+      background-color: #d4a855;
+    }
+
+    h2 {
+      color: black;
+    }
   }
 }
 
@@ -49,6 +72,7 @@ form {
   & label {
     text-align: center;
   }
+
   & input {
     text-align: center;
     border-radius: 10px;
