--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -1,36 +1,41 @@
 #contact {
   display: flex;
   width: 100%;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
   flex-wrap: wrap;
-  padding-top: 10px;
-  background-color: #d4a855;
-  margin-top: 40px;
-
+  padding-top: 100px;
+  align-content: space-around;
+  background-color: #114a64;
+  color: #f5f5f5;
   /*media query de tablet*/
   @include tablet {
     justify-content: space-evenly;
+    padding-top: 90px;
   }
   /*media query de computador*/
   @include computer {
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    border-top: 0px;
+    height: 250px;
+    background-color: #114a64;
   }
 }
 
 #links {
   display: flex;
-  gap: 20px;
+  gap: 40px;
   justify-content: center;
   flex-wrap: wrap;
 
   & img {
-    height: 100px;
+    height: 80px;
     padding: 2px;
     &:hover {
       transition: 500ms;
       border-radius: 50%;
-      background-color: #114a64 /* #d4a855 */;
+      background-color: /* #114a64 */ #d4a855;
     }
   }
 }
