--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -1,6 +1,6 @@
 #about {
   margin-top: 40px;
-
+  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,18 +20,17 @@
 
   .intro {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 80%;
-
     & img {
       height: 300px;
       border-radius: 50px;
       &:hover {
         transition: 500ms;
-        box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
-        -webkit-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
-        -moz-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
+        box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
+        -webkit-box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
+        -moz-box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
       }
     }
   }
@@ -56,11 +55,10 @@
 
         &:hover {
           transition: 500ms;
-          background-color: #000;
           border-radius: 10px;
-          box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
-          -webkit-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
-          -moz-box-shadow: -1px -2px 10px 9px rgba(102, 93, 93, 0.75);
+          box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
+          -webkit-box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
+          -moz-box-shadow: 0px 0px 5px 6px rgba(156, 148, 148, 0.36);
         }
       }
     }
@@ -70,7 +68,7 @@
     width: 100%;
     flex-wrap: wrap;
     display: flex;
-    text-align: left;
+    text-align: center;
 
     /*media query de tablet*/
     @include tablet {
