--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -23,6 +23,7 @@
     justify-content: space-evenly;
     align-items: center;
     width: 80%;
+    padding-top: 50px;
     & img {
       height: 300px;
       border-radius: 50px;
