--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  padding-top: 80px;
   text-align: center;
 
   & h2 {
