--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -37,7 +37,7 @@
   }
   .powered {
     text-align: center;
-    width: 90%;
+    width: 100%;
 
     & p {
       font-weight: 600;
@@ -67,10 +67,234 @@
 
   .skills {
     width: 100%;
-    flex-wrap: wrap;
     display: flex;
+    flex-wrap: wrap;
     text-align: center;
 
+    & #frontSkills {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+
+      //Barra de responsive
+      & .responsive {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 85%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      //Barra de apis
+      & .api {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 70%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      //Barra de git
+      & .git {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 75%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      //Barra de css
+      & .css {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 80%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      //Barra de react
+      & .react {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 75%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      /*media query de tablet*/
+      @include tablet {
+        width: 50%;
+      }
+
+      /*media query de computador*/
+      @include computer {
+        width: 50%;
+      }
+    }
+
+    & .softSkills {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+
+      /*Estilos de barra CSS*/
+      & .teamwork {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 85%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      // Estilos de barra communication
+      & .communication {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 80%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      // Estilos de barra problem
+      & .problem {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 75%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      /*Estilos de barra learning*/
+      & .learning {
+        padding-bottom: 2rem;
+        .contenedor {
+          width: 280px;
+          height: 15px;
+          background-color: #d6cdcd;
+          border-radius: 10px;
+          & .valor {
+            width: 85%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #114a64;
+            &:hover {
+              transition: 500ms;
+              background-color: #d4a855;
+            }
+          }
+        }
+      }
+
+      /*media query de tablet*/
+      @include tablet {
+        width: 50%;
+      }
+
+      /*media query de computador*/
+      @include computer {
+        width: 50%;
+      }
+    }
     /*media query de tablet*/
     @include tablet {
       justify-content: space-around;
