--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -1,19 +1,37 @@
 #home {
   display: flex;
-  justify-content: center;
   align-items: center;
   font-size: larger;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 10%;
   top: 0;
   padding-top: 15px;
   background-color: #114a64;
 
+  & .logoBox {
+    display: none;
+    justify-content: center;
+    width: 10%;
+    height: 100%;
+    & img {
+      width: 60px;
+      height: 100%;
+    }
+    @include tablet {
+      display: flex;
+    }
+    @include computer {
+      display: flex;
+    }
+  }
+
   & ul {
+    padding: 0;
+    width: 100%;
     margin: 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-direction: row;
     list-style: none;
     /*media query de computador*/
