--- a/src/styles/_About.scss
+++ b/src/styles/_About.scss
@@ -26,24 +26,19 @@
     align-items: center;
     width: 100%;
     padding-top: 70px;
+    margin-bottom: 5rem;
     & img {
       object-fit: cover;
       height: 280px;
       width: 240px;
-      border-radius: 50% 50% 50% 50% / 49% 47% 53% 51%;
+      border-radius: 2rem;
       border: hidden;
-      &:hover {
-        transition: 500ms;
-        box-shadow: 0px 0px 5px 6px #114a64;
-        -webkit-box-shadow: 0px 0px 5px 6px #114a64;
-        -moz-box-shadow: 0px 0px 5px 6px #114a64;
-      }
     }
   }
   .powered {
     text-align: center;
     width: 100%;
-
+    margin-bottom: 5rem;
     & p {
       font-weight: 600;
     }
