--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,4 @@
 @import "./styles/_Projects.scss";
 @import "./styles/_Contact.scss";
 @import "./styles/_Footer.scss";
+@import "./styles/ExperienceModal.scss";
